Redesign 'So funktioniert\xE2\x80\x99s' section for clarity

--- a/index.html
+++ b/index.html
@@ -124,42 +124,73 @@
       </div>
     </div>
 
-    <div class="sectionHeader" id="how">
-      <h2>So funktioniert’s</h2>
-      <p>RecruiterIQ ist ein Workflow: Es bewertet nicht nur, sondern führt Sie bis zur Entscheidung. Ohne Blackbox-Versprechen.</p>
-    </div>
-    <div class="steps">
-      <div class="card step">
-        <div class="stepNum">1</div>
-        <h3>Signal extrahieren</h3>
-        <p>Claims werden in Evidence-Elemente zerlegt. Evidence Gaps und Flags (Inkonistenzen) werden sichtbar.</p>
-      </div>
-      <div class="card step">
-        <div class="stepNum">2</div>
-        <h3>Signal verifizieren</h3>
-        <p>Proof-of-Work liefert messbare Antworten. Interview Kit und Follow-ups schließen Evidence-Lücken gezielt.</p>
-      </div>
-      <div class="card step">
-        <div class="stepNum">3</div>
-        <h3>Entscheidung beschleunigen</h3>
-        <p>Scorecards + HM-Queue strukturieren Feedback. Audit-Trail und Exporte sichern Governance und Reporting.</p>
-      </div>
-    </div>
+    <section class="card process" id="how" aria-label="So funktioniert RecruiterIQ">
+      <div class="processBg" aria-hidden="true"></div>
+      <div class="processGrid">
+        <div class="processIntro">
+          <div class="kicker">SO FUNKTIONIERT’S</div>
+          <h2>Vom Text zur belegbaren Entscheidung.</h2>
+          <p>
+            RecruiterIQ ist kein „Scoring-Widget“, sondern ein Workflow: Es extrahiert Signal, verifiziert es gezielt
+            und beschleunigt Entscheidungen mit Scorecards, HM-Queue und Audit.
+          </p>
+          <div class="processMiniStats" aria-label="Prinzipien">
+            <div class="processMiniStat">
+              <div class="processMiniTop">Evidence-first</div>
+              <div class="processMiniSub">Priorisierung nach Belegbarkeit statt nach Sprachqualität.</div>
+            </div>
+            <div class="processMiniStat">
+              <div class="processMiniTop">Workflow-first</div>
+              <div class="processMiniSub">Templates, Sequences, HM-Queue und Scorecards in einem Flow.</div>
+            </div>
+            <div class="processMiniStat">
+              <div class="processMiniTop">Audit-ready</div>
+              <div class="processMiniSub">Events exportierbar (CSV) für Reporting und Compliance.</div>
+            </div>
+          </div>
+          <div class="cta" style="margin-top:16px">
+            <a class="btn primary" href="/login?next=%2Finbox">Workflow ansehen</a>
+            <a class="btn" href="/features">Alle Features</a>
+          </div>
+        </div>
 
-    <div class="stats" aria-label="Business outcomes">
-      <div class="card stat">
-        <div class="statVal">Evidence-first</div>
-        <div class="statLbl">Sie priorisieren nach Belegbarkeit statt nach Sprachqualität.</div>
+        <ol class="processSteps" aria-label="Prozessschritte">
+          <li class="processStep s1">
+            <div class="processBadge">1</div>
+            <div class="processContent">
+              <h3>Signal extrahieren</h3>
+              <p>Claims werden in Evidence-Elemente zerlegt. Evidence Gaps und Flags (Inkonistenzen) werden sichtbar.</p>
+              <ul>
+                <li>Evidence Pack: strongest/weakest Claims</li>
+                <li>Flags: Buzzwords ohne Evidence, Zeitlinien, fehlende Links</li>
+              </ul>
+            </div>
+          </li>
+          <li class="processStep s2">
+            <div class="processBadge">2</div>
+            <div class="processContent">
+              <h3>Signal verifizieren</h3>
+              <p>Proof-of-Work liefert messbare Antworten. Interview Kit und Follow-ups schließen Evidence-Lücken gezielt.</p>
+              <ul>
+                <li>Public Assessment-Link mit Aufgaben und Antworten</li>
+                <li>Interview Kit: Fragen aus Evidence Gaps und Flags</li>
+              </ul>
+            </div>
+          </li>
+          <li class="processStep s3">
+            <div class="processBadge">3</div>
+            <div class="processContent">
+              <h3>Entscheidung beschleunigen</h3>
+              <p>Scorecards und HM-Queue strukturieren Feedback. Audit-Trail und Exporte sichern Governance und Reporting.</p>
+              <ul>
+                <li>Scorecards: Kriterien, Empfehlung, Notes</li>
+                <li>HM-Queue: Approve/Hold/Reject, auditierbar</li>
+              </ul>
+            </div>
+          </li>
+        </ol>
       </div>
-      <div class="card stat">
-        <div class="statVal">Workflow-first</div>
-        <div class="statLbl">Templates, Sequences, HM-Queue und Scorecards sind ein durchgängiger Flow.</div>
-      </div>
-      <div class="card stat">
-        <div class="statVal">Audit-ready</div>
-        <div class="statLbl">Events/Audit exportierbar (CSV). Ideal für HR-Reporting und Compliance.</div>
-      </div>
-    </div>
+    </section>
 
     <div class="grid" id="usps">
       <div class="card mini">
